[metadata]
name = nagare-services-transaction
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Transaction service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-transaction
    Tracker = https://github.com/nagareproject/services-transaction/issues

[options]
zip_safe = False
packages = find:
install_requires =
    transaction
    nagare-services

[options.entry_points]
nagare.services =
    transaction = nagare.services.transaction:TransactionHandler

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
